--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "compile": "tsc",
-    "compile:watch": "tsc --watch"
+    "compile:watch": "tsc --watch",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^24.0.25",
+    "@types/p5": "^0.9.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.3.0",
-    "typescript": "^3.7.4"
+    "ts-loader": "^7.0.1",
+    "typescript": "^3.7.4",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "p5": "^1.0.0"
+  }
 }
